@@ -1,10 +1,28 @@
 <?php
 /**
  * Readability toolbar in the header. 
- * Theme: Manduca
  *
  * @since 17.8
  * */
+
+ /*  This file is part of WordPress theme named Manduca - focus on accessibility.
+ *
+	Copyright (C) 2015-2019  Zsolt Edelényi (ezs@web25.hu)
+
+    Manduca is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    in /assets/docs/licence.txt.  If not, see <https://www.gnu.org/licenses/>.
+*/
+
 ?>
 
 <?php
@@ -52,8 +70,12 @@ printf( '<button id="toolbar-buttons-open" aria-label="%3$s" class="toolbar-butt
 	  <?php echo Manduca_Template_Functions::get_info_button_html(); ?>
 	  
 	  </ul>
-		  <span role="button" id="buttons-close" class="buttons-close" aria-label="<?php _e( 'Close' ) ; ?>">
-			<?php echo manduca_get_svg( array( 'icon' => 'close' ) ); ?>
+		<span role="button" id="buttons-close" class="buttons-close" aria-label="<?php _e( 'Close' ) ; ?>">
+				<?php echo manduca_get_svg( array( 'icon' => 'close' ) ); ?>
+	   </span>
+		
+		<span role="button" id="buttons-close" class="buttons-close" aria-label="<?php _e( 'Close' ) ; ?>">
+				<?php echo manduca_get_svg( array( 'icon' => 'close' ) ); ?>
 	   </span>
 </div>
 
